--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             border-radius: 8px;
             text-decoration: none;
             font-weight: bold;
+            margin: 10px;
         }
         footer {
             text-align: center;
@@ -53,37 +54,38 @@
 <body>
     <header>
         <h1>TamaCLI 🐣</h1>
-        <p>Your terminal just got a lot cuter!</p>
+        <p>Terminal got lonely? Not anymore! 😼</p>
     </header>
 
     <main>
         <section>
             <h2>🐾 What is TamaCLI?</h2>
-            <p>TamaCLI is a playful, terminal-based pet inspired by Tamagotchi. It lives inside your prompt, gets hungry over time, and needs you to care for it with commands like <code>tamacli feed</code>.</p>
+            <p>TamaCLI is a playful, terminal-based pet inspired by Tamagotchi. It lives inside your prompt, gets hungry over time, and needs your care with commands like <code>tamacli feed</code>.</p>
         </section>
 
         <section>
             <h2>💻 Demo</h2>
-            <img src="https://github.com/user-attachments/assets/7ffcb00e-b07c-4cd3-ae61-dbedb2dc3e11" alt="TamaCLI Demo Screenshot">
+            <img src="assets/demo.png" alt="TamaCLI Demo Screenshot">
         </section>
 
         <section>
             <h2>✨ Features</h2>
             <ul>
                 <li>Lives inside your terminal</li>
-                <li>Tracks mood + hunger</li>
-                <li>Feed it to keep it happy</li>
-                <li>More features coming soon!</li>
+                <li>Tracks mood, hunger, and health</li>
+                <li>Feed and heal your pet</li>
+                <li>More fun commands coming soon!</li>
             </ul>
         </section>
 
         <section style="text-align: center;">
-            <a class="button" href="https://github.com/Cardsea/tamacli" target="_blank">⭐ Check it out on GitHub</a>
+            <a class="button" href="https://github.com/TamaCLI/TamaCLI-prompt" target="_blank">⭐ View on GitHub</a>
+            <a class="button" href="https://github.com/TamaCLI/TamaCLI-prompt/archive/refs/heads/main.zip">⬇️ Download ZIP</a>
         </section>
     </main>
 
     <footer>
-        <p>Not affiliated with Tamagotchi or Bandai. Just for fun 💕</p>
+        <p>Not affiliated with Tamagotchi or Bandai. This project is just for fun 💕</p>
     </footer>
 </body>
 </html>
