--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <section>
             <h2>💻 Demo</h2>
-            <img src="assets/demo.png" alt="TamaCLI Demo Screenshot">
+            <img src="https://raw.githubusercontent.com/TamaCLI/TamaCLI-prompt/refs/heads/main/assets/demo.png" alt="TamaCLI Demo Screenshot">
         </section>
 
         <section>
