--- a/index.html
+++ b/index.html
@@ -2,54 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TamaCLI 🐣</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', sans-serif;
-            background-color: #1e1e1e;
-            color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #ff77aa;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        main {
-            max-width: 800px;
-            margin: 30px auto;
-            padding: 20px;
-        }
-        img {
-            width: 100%;
-            border-radius: 12px;
-            margin: 20px 0;
-        }
-        section {
-            margin-bottom: 30px;
-        }
-        a.button {
-            display: inline-block;
-            background-color: #77ddff;
-            color: #000;
-            padding: 12px 20px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: bold;
-            margin: 10px;
-        }
-        footer {
-            text-align: center;
-            margin: 40px 0;
-            font-size: 0.9em;
-            color: #aaa;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -87,5 +42,7 @@
     <footer>
         <p>Not affiliated with Tamagotchi or Bandai. This project is just for fun 💕</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
