--- a/index.html
+++ b/index.html
@@ -3,46 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TamaCLI 🐣</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>TamaCLI 🐣 - Your Terminal's New Best Friend!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>TamaCLI 🐣</h1>
-        <p>Terminal got lonely? Not anymore! 😼</p>
+        <p>Finally, your terminal has someone to talk to! 🎉</p>
     </header>
 
     <main>
         <section>
-            <h2>🐾 What is TamaCLI?</h2>
-            <p>TamaCLI is a playful, terminal-based pet inspired by Tamagotchi. It lives inside your prompt, gets hungry over time, and needs your care with commands like <code>tamacli feed</code>.</p>
+            <h2>🤔 What in the World is TamaCLI?</h2>
+            <p>Remember Tamagotchi? Well, we thought, "Why should phones have all the fun?" So we created TamaCLI - a delightful little pet that lives right in your terminal! It's like having a tiny, digital friend who hangs out while you code.</p>
+            <p>No more lonely debugging sessions or silent deployments. Your terminal buddy is there to cheer you on with commands like <code>tamacli feed</code> (because even virtual pets get hungry during those long coding sessions).</p>
         </section>
 
         <section>
-            <h2>💻 Demo</h2>
+            <h2>💻 See It In Action!</h2>
+            <p>Warning: Extreme cuteness ahead! 🚀</p>
             <img src="https://raw.githubusercontent.com/TamaCLI/TamaCLI-prompt/refs/heads/main/assets/demo.png" alt="TamaCLI Demo Screenshot">
         </section>
 
         <section>
-            <h2>✨ Features</h2>
+            <h2>✨ Features That'll Make You Go "Aww!"</h2>
             <ul>
-                <li>Lives inside your terminal</li>
-                <li>Tracks mood, hunger, and health</li>
-                <li>Feed and heal your pet</li>
-                <li>More fun commands coming soon!</li>
+                <li>Lives in your terminal (no pet deposit required!)</li>
+                <li>Gets hungry while you code (just like a real developer)</li>
+                <li>Shows emotions based on your command success rate (it feels your pain)</li>
+                <li>Needs care and attention (but won't wake you up at 3 AM)</li>
+                <li>More surprises coming soon! (we're not telling... yet)</li>
             </ul>
         </section>
 
         <section style="text-align: center;">
-            <a class="button" href="https://github.com/TamaCLI/TamaCLI-prompt" target="_blank">⭐ View on GitHub</a>
+            <h2>🚀 Ready to Make Your Terminal Happy?</h2>
+            <p>Your terminal has been waiting for this moment its entire life!</p>
+            <a class="button" href="https://github.com/TamaCLI/TamaCLI-prompt" target="_blank">⭐ Adopt Now on GitHub</a>
             <a class="button" href="https://github.com/TamaCLI/TamaCLI-prompt/archive/refs/heads/main.zip">⬇️ Download ZIP</a>
         </section>
     </main>
 
     <footer>
-        <p>Not affiliated with Tamagotchi or Bandai. This project is just for fun 💕</p>
+        <p>Not affiliated with Tamagotchi or Bandai. Just a fun project to make terminals less lonely! 💕</p>
+        <p>Made with 🎮 by developers who talk to their computers</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
