Update copy to emphasize pet feeding requirement

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
         <section>
             <h2>🤔 What in the World is TamaCLI?</h2>
             <p>Remember Tamagotchi? Well, we thought, "Why should phones have all the fun?" So we created TamaCLI - a delightful little pet that lives right in your terminal! It's like having a tiny, digital friend who hangs out while you code.</p>
-            <p>No more lonely debugging sessions or silent deployments. Your terminal buddy is there to cheer you on with commands like <code>tamacli feed</code> (because even virtual pets get hungry during those long coding sessions).</p>
+            <p>No more lonely debugging sessions or silent deployments. Your terminal buddy is there to cheer you on. and force you to feed it with commands like <code>tamacli feed</code> (because even virtual pets get hungry during those long coding sessions).</p>
         </section>
 
         <section>
             <h2>💻 See It In Action!</h2>
-            <p>Warning: Extreme cuteness ahead! 🚀</p>
             <img src="https://raw.githubusercontent.com/TamaCLI/TamaCLI-prompt/refs/heads/main/assets/demo.png" alt="TamaCLI Demo Screenshot">
         </section>
 
