--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TamaCLI 🐣 - Your Terminal's New Best Friend!</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/terminal.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fira-code@6.2.0/distr/fira_code.css">
 </head>
 <body>
     <header>
@@ -16,12 +18,22 @@
         <section>
             <h2>🤔 What in the World is TamaCLI?</h2>
             <p>Remember Tamagotchi? Well, we thought, "Why should phones have all the fun?" So we created TamaCLI - a delightful little pet that lives right in your terminal! It's like having a tiny, digital friend who hangs out while you code.</p>
-            <p>No more lonely debugging sessions or silent deployments. Your terminal buddy is there to cheer you on. and force you to feed it with commands like <code>tamacli feed</code> (because even virtual pets get hungry during those long coding sessions).</p>
+            <p>No more lonely debugging sessions or silent deployments. Your terminal buddy is there to cheer you on with commands like <code>tamacli feed</code> (because even virtual pets get hungry during those long coding sessions).</p>
         </section>
 
         <section>
-            <h2>💻 See It In Action!</h2>
-            <img src="https://raw.githubusercontent.com/TamaCLI/TamaCLI-prompt/refs/heads/main/assets/demo.png" alt="TamaCLI Demo Screenshot">
+            <h2>💻 Try It Now!</h2>
+            <p>Type <code>help</code> to see available commands!</p>
+            <div id="demo-terminal"></div>
+            <div class="demo-tips">
+                <p>💡 Tips:</p>
+                <ul>
+                    <li>Use <code>help</code> to see all commands</li>
+                    <li>Your pet gets hungry over time</li>
+                    <li>Use arrow keys to access command history</li>
+                    <li>Keep an eye on your pet's mood!</li>
+                </ul>
+            </div>
         </section>
 
         <section>
@@ -48,6 +60,15 @@
         <p>Made with 🎮 by developers who talk to their computers</p>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/demo.js"></script>
+    <script>
+        // Initialize the demo terminal
+        document.addEventListener('DOMContentLoaded', () => {
+            const demoContainer = document.getElementById('demo-terminal');
+            const demo = new TamaCliDemo(demoContainer);
+            demo.addToOutput('Welcome to TamaCLI Demo! Type "help" to get started.');
+        });
+    </script>
 </body>
 </html>
