Update demo to match actual TamaCLI commands (feed, status, name, doctor)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TamaCLI 🐣 - Your Terminal's New Best Friend!</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/terminal.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fira-code@6.2.0/distr/fira_code.css">
 </head>
@@ -28,10 +28,11 @@
             <div class="demo-tips">
                 <p>💡 Tips:</p>
                 <ul>
-                    <li>Use <code>help</code> to see all commands</li>
-                    <li>Your pet gets hungry over time</li>
-                    <li>Use arrow keys to access command history</li>
-                    <li>Keep an eye on your pet's mood!</li>
+                    <li>Use <code>tamacli feed</code> to feed your hungry pet</li>
+                    <li>Check their status with <code>tamacli status</code></li>
+                    <li>Give them a name using <code>tamacli name YourPetName</code></li>
+                    <li>Call <code>tamacli doctor</code> if they're not feeling well</li>
+                    <li>Your pet gets hungry over time, so keep an eye on them!</li>
                 </ul>
             </div>
         </section>
@@ -41,9 +42,9 @@
             <ul>
                 <li>Lives in your terminal (no pet deposit required!)</li>
                 <li>Gets hungry while you code (just like a real developer)</li>
-                <li>Shows emotions based on your command success rate (it feels your pain)</li>
+                <li>Shows emotions based on their hunger and health</li>
                 <li>Needs care and attention (but won't wake you up at 3 AM)</li>
-                <li>More surprises coming soon! (we're not telling... yet)</li>
+                <li>Can be named anything you want (except "undefined")</li>
             </ul>
         </section>
 
