Fix CSS and JS file references, add demo tips styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TamaCLI 🐣 - Your Terminal's New Best Friend!</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/terminal.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/terminal.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fira-code@6.2.0/distr/fira_code.css">
 </head>
 <body>
@@ -61,8 +61,8 @@
         <p>Made with 🎮 by developers who talk to their computers</p>
     </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/demo.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/demo.js"></script>
     <script>
         // Initialize the demo terminal
         document.addEventListener('DOMContentLoaded', () => {
