--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section>
             <h2>🤔 What in the World is TamaCLI?</h2>
-            <p>Remember Tamagotchi? Well, we thought, "Why should phones have all the fun?" So we created TamaCLI - a delightful little pet that lives right in your terminal! It's like having a tiny, digital friend who hangs out while you code.</p>
+            <p>Remember Tamagotchi? Well, i thought, "why does my terminal have to be lonely?" So we created TamaCLI - a delightful little pet that lives right in your terminal! It's like having a tiny, digital friend who hangs out while you code.</p>
             <p>No more lonely debugging sessions or silent deployments. Your terminal buddy is there to cheer you on with commands like <code>tamacli feed</code> (because even virtual pets get hungry during those long coding sessions).</p>
         </section>
 
